fixed overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,8 @@ div.colophon {
 
   #logo {
     display: block;
+    margin-right: 0;
+    padding-right: 0;
   }
 
   nav ul {
